--- a/ballerina-tests/graphql-subgraph-test-suite/Dependencies.toml
+++ b/ballerina-tests/graphql-subgraph-test-suite/Dependencies.toml
@@ -5,7 +5,7 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.11.43"
+distribution-version = "2201.11.0-20241117-133400-a3054b77"
 
 [[package]]
 org = "ballerina"
