--- a/ballerina/Dependencies.toml
+++ b/ballerina/Dependencies.toml
@@ -5,7 +5,7 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.11.0-SNAPSHOT"
+distribution-version = "2201.11.0-20241126-123300-03fa53fd"
 
 [[package]]
 org = "ballerina"
