--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -8,7 +8,7 @@ keywords = ["gql", "network", "query", "service"]
 repository = "https://github.com/ballerina-platform/module-ballerina-graphql"
 icon = "icon.png"
 license = ["Apache-2.0"]
-distribution = "2201.10.0-20241025-103700-5c9e6a27"
+distribution = "2201.11.0"
 
 [platform.java21]
 graalvmCompatible = true
