--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -9,7 +9,7 @@ jobs:
     call_workflow:
         name: Run Release Workflow
         if: ${{ github.repository_owner == 'ballerina-platform' }}
-        uses: ballerina-platform/ballerina-library/.github/workflows/release-package-template.yml@main
+        uses: ballerina-platform/ballerina-library/.github/workflows/release-package-template.yml@2201.10.x
         secrets: inherit
         with:
             package-name: graphql
