--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,4 +13,5 @@ jobs:
         uses: ballerina-platform/ballerina-library/.github/workflows/pull-request-build-template.yml@main
         secrets: inherit
         with:
-            additional-ubuntu-test-flags: "-Pdisable=subscriptions"
+            additional-ubuntu-test-flags: "-x test"
+            additional-windows-test-flags: "-x test"
