--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -50,6 +50,7 @@ ballerina {
     module = packageName
     langVersion = ballerinaLangVersion
     testCoverageParam = "--code-coverage --coverage-format=xml --includes=io.ballerina.stdlib.graphql.*:ballerina.graphql*"
+    platform = 'java21'
 }
 
 task updateTomlFiles {
