--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
 version=1.16.0-SNAPSHOT
-ballerinaLangVersion=2201.11.0
+ballerinaLangVersion=2201.12.0-20250221-092200-b3de4372
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=6.0.18
