--- a/gradle.properties
+++ b/gradle.properties
@@ -15,35 +15,35 @@ jacocoVersion=0.8.10
 
 # Ballerina Library Dependencies
 # Level 01
-stdlibIoVersion=1.7.0
-stdlibTimeVersion=2.6.0
-stdlibUrlVersion=2.5.0
+stdlibIoVersion=1.8.0-20250304-133300-967a7a4
+stdlibTimeVersion=2.7.0-20250304-133100-009bfd7
+stdlibUrlVersion=2.6.0-20250304-133100-78baea0
 
 # Level 02
-stdlibConstraintVersion=1.6.0
-stdlibCryptoVersion=2.8.0
-stdlibLogVersion=2.11.0
-stdlibOsVersion=1.9.0
-stdlibTaskVersion=2.6.0
+stdlibConstraintVersion=1.7.0-20250305-165400-52275bd
+stdlibCryptoVersion=2.9.0-20250305-165500-b42b932
+stdlibLogVersion=2.12.0-20250305-165600-b4606dd
+stdlibOsVersion=1.10.0-20250305-204300-3f8417d
+stdlibTaskVersion=2.7.0-20250305-173600-1c8b667
 
 # Level 03
-stdlibCacheVersion=3.9.0
-stdlibFileVersion=1.11.0
-stdlibMimeVersion=2.11.0
-stdlibUuidVersion=1.9.0
+stdlibCacheVersion=3.10.0-20250305-175000-1e05eb3
+stdlibFileVersion=1.12.0-20250305-204800-827a6c2
+stdlibMimeVersion=2.12.0-20250305-174800-8528404
+stdlibUuidVersion=1.10.0-20250305-175100-746df53
 
 # Level 04
-stdlibAuthVersion=2.13.0
-stdlibDataJsonDataVersion=1.0.0
-stdlibJwtVersion=2.14.0
-stdlibOAuth2Version=2.13.0
+stdlibAuthVersion=2.14.0-20250305-182200-ed0a9db
+stdlibDataJsonDataVersion=1.1.0-20250305-182300-23e3c81
+stdlibJwtVersion=2.15.0-20250305-182000-1eefc7e
+stdlibOAuth2Version=2.14.0-20250305-182700-f5fb8ef
 
 # Level 05
-stdlibHttpVersion=2.13.0
+stdlibHttpVersion=2.14.0-20250305-195600-c559baa
 
 # Level 06
-stdlibWebsocketVersion=2.13.0
+stdlibWebsocketVersion=2.14.0-20250305-221500-8b317d3
 
 # Ballerinax Observer
-observeVersion=1.4.0
-observeInternalVersion=1.4.0
+observeVersion=1.5.0-20250304-140800-d60274b
+observeInternalVersion=1.5.0-20250305-160800-51dc066
