--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "ballerina"
 name = "graphql"
-version = "1.14.1"
+version = "1.14.2"
 authors = ["Ballerina"]
 export=["graphql", "graphql.subgraph", "graphql.dataloader"]
 keywords = ["gql", "network", "query", "service"]
@@ -16,11 +16,11 @@ graalvmCompatible = true
 [[platform.java17.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "graphql-native"
-version = "1.14.1"
-path = "../native/build/libs/graphql-native-1.14.1.jar"
+version = "1.14.2"
+path = "../native/build/libs/graphql-native-1.14.2-SNAPSHOT.jar"
 
 [[platform.java17.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "graphql-commons"
-version = "1.14.1"
-path = "../commons/build/libs/graphql-commons-1.14.1.jar"
+version = "1.14.2"
+path = "../commons/build/libs/graphql-commons-1.14.2-SNAPSHOT.jar"
