--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "ballerina"
 name = "graphql"
-version = "1.15.2"
+version = "1.15.3"
 authors = ["Ballerina"]
 keywords = ["gql", "network", "query", "service"]
 repository = "https://github.com/ballerina-platform/module-ballerina-graphql"
@@ -30,11 +30,11 @@ graalvmCompatible = true
 [[platform.java21.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "graphql-native"
-version = "1.15.2"
-path = "../native/build/libs/graphql-native-1.15.2.jar"
+version = "1.15.3"
+path = "../native/build/libs/graphql-native-1.15.3-SNAPSHOT.jar"
 
 [[platform.java21.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "graphql-commons"
-version = "1.15.2"
-path = "../commons/build/libs/graphql-commons-1.15.2.jar"
+version = "1.15.3"
+path = "../commons/build/libs/graphql-commons-1.15.3-SNAPSHOT.jar"
