--- a/gradle.properties
+++ b/gradle.properties
@@ -42,7 +42,7 @@ stdlibOAuth2Version=2.14.0
 stdlibHttpVersion=2.14.0
 
 # Level 06
-stdlibWebsocketVersion=2.14.0
+stdlibWebsocketVersion=2.15.0-20250411-131900-4b939e7
 
 # Ballerinax Observer
 observeVersion=1.5.0
